# ultimate_gazebo

./: README.md  package.xml
launch/: base.launch
models/X1-Y1-Z2/: model.config  model.sdf  model1.sdf  model2.sdf  model3.sdf  model4.sdf
models/X1-Y2-Z1/: model.config  model.sdf  model1.sdf  model2.sdf  model3.sdf  model4.sdf
models/X1-Y2-Z2-CHAMFER/: model.config  model.sdf  model1.sdf  model2.sdf  model3.sdf  model4.sdf
models/X1-Y2-Z2-TWINFILLET/: model.config  model.sdf  (+4 more)
ultimate_gazebo/: CMakeLists.txt
ur5_gazebo/: CMakeLists.txt  package.xml
ur5_gazebo/launch/: BRICKS.launch
ur5_gazebo/models/X1-Y1-Z2/: model.config  model.sdf
ur5_gazebo/models/X1-Y2-Z1/: model.config  model.sdf
ur5_gazebo/models/X1-Y2-Z2/: model.config  model.sdf
ur5_gazebo/models/X1-Y2-Z2-CHAMFER/: model.config  model.sdf
ur5_gazebo/models/X1-Y2-Z2-TWINFILLET/: model.config  model.sdf
ur5_gazebo/models/X1-Y3-Z2/: model.config  model.sdf
ur5_gazebo/models/X1-Y3-Z2-FILLET/: model.config  model.sdf
ur5_gazebo/models/X1-Y4-Z1/: model.config  model.sdf
ur5_gazebo/models/X1-Y4-Z2/: model.config  model.sdf
ur5_gazebo/models/X2-Y2-Z2/: model.config  model.sdf
ur5_gazebo/models/X2-Y2-Z2-FILLET/: model.config  model.sdf
ur5_gazebo/models/end_table_left/: model.config  model.sdf
ur5_gazebo/models/end_table_right/: model.config  model.sdf
ur5_gazebo/models/end_table_right/materials/scripts/: table.material
ur5_gazebo/models/kinect/: model.sdf
ur5_gazebo/models/ur5_base/: model.sdf
ur5_gazebo/worlds/: prova.world
worlds/: 1.world  base.world  base1.world
(+76 files in other folders)
