<?xml version="1.0"?>
<package format="2">
  <name>ur5_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation of UR5 robot with a robotiq gripper for picking up blocks</description>

  <maintainer email="tobias.carcereri@studenti.unitn.it">Tobias Carcereri</maintainer>
  <author email="tobias.carcereri@studenti.unitn.it">Tobias Carcereri</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur5_description</exec_depend>
  <exec_depend>robotiq_gazebo</exec_depend>

  <export>
  </export>

</package>
